test/Fail/Issue5294.err
Issue5294.agda:35.15-16: error: [UnequalTypes]
The type
  F x
is not a subtype of
  A
when checking that the expression r has type A
